[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemies/slimeBlue1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/slimeBlue2.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://Blue Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Blue",
"speed": 2.5
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19, 4.21875 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.5, 23 )

[node name="Blue Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 521, 1038 )
frames = SubResource( 1 )
animation = "Blue"
offset = Vector2( -521, -1038 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.35299e-05, 11.5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 23 )
collision_mask = 8

[node name="up_collision" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="up_collision"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="middle_collision" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="middle_collision"]
position = Vector2( -3.27835e-07, 11.5 )
rotation = 1.5708
shape = SubResource( 4 )

[connection signal="body_shape_entered" from="up_collision" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="up_collision" to="." method="_on_Area2D_body_shape_exited"]
[connection signal="body_shape_entered" from="middle_collision" to="." method="_on_middle_collision_body_shape_entered"]
